# Clio

./: CLAUDE.md  Cargo.toml  README.md  README_zh.md
.github/workflows/: release.yml
docs/: architecture.md
src/: config.rs  main.rs
src/cli/: config.rs  help.rs  list.rs  mod.rs
src/store/: engine.rs
src/sync/: backend.rs  mod.rs
src/util/: format.rs  paths.rs
tests/: integration.rs
